--- a/index.html
+++ b/index.html
@@ -9,26 +9,39 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Bootstrap Practice</title>
   </head>
-  <body>
+  <body class="position-relative">
     <!-- NAVBAR -->
 
     <header>
-      <nav class="navbar navbar-expand-md justify-content-center bg-light">
-        <ul class="navbar-nav">
+      <nav id="nav-bar-example" class="navbar navbar-expand-md justify-content-center bg-light fixed-top">
+        <ul class="nav nav-pills">
           <li class="nav-item px-2">
-            <a href="#" class="nav-link">Home</a>
+            <a href="#scrollspy-1" class="nav-link">Home</a>
           </li>
           <li class="nav-item px-2">
-            <a href="#" class="nav-link">About</a>
+            <a href="#scrollspy-2" class="nav-link">About</a>
           </li>
           <li class="nav-item px-2">
-            <a href="#" class="nav-link">Contact</a>
+            <a href="#scrollspy-3" class="nav-link">Contact</a>
           </li>
         </ul>
       </nav>
     </header>
+
+    <main data-bs-spy="scroll" data-bs-target="nav-bar-example" class="scrollspy-example mt-5" data-bs-offset="0" tabindex="0">
+      <h1 class="text-center" id="scrollspy-1"> <span>Hey there. I'm Javier.</span> <span>I'm a software developer</span> </h1>
+
+
+      <h2 class="text-center" id="scrollspy-2">My Recent Works</h2>
+
+      
+      <h2 class="text-center" id="scrollspy-3">About me</h2>
+
+
+    </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
