--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
   <body>
     <!-- NAVBAR -->
 
+    <header>
+      <nav class="navbar navbar-expand-md justify-content-center bg-light">
+        <ul class="navbar-nav">
+          <li class="nav-item px-2">
+            <a href="#" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item px-2">
+            <a href="#" class="nav-link">About</a>
+          </li>
+          <li class="nav-item px-2">
+            <a href="#" class="nav-link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
