Add more padding to the badge and profile picture link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav
       id="navbar-example2"
       class="navbar navbar-light bg-light px-3 fixed-top justify-content-center border-bottom">
-      <div class="img-container">
+      <div class="img-container px-3">
         <a href="#" class="position-relative"><span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle"><span class="visually-hidden">99+</span></span><img class="rounded-circle" src="https://i.pinimg.com/originals/08/61/b7/0861b76ad6e3b156c2b9d61feb6af864.jpg" alt="Profile Picture"></a>
       </div>
       <ul class="nav nav-pills">
