Fix linters errors

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                       <span class="badge p-2">HTML</span>
                     </div>
                     <button type="button" data-bs-toggle="modal" data-bs-target="#project-modal" class="project-btn btn btn-success p-2 m-3 text-center">See Project</button>
-                    <div class="modal fade" id="project-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="project-modal" tabindex="-1" aria-hidden="true">
                       <div class="modal-dialog modal-xl p-2">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -136,8 +136,8 @@
                       <span class="badge p-2">JavaScript</span>
                       <span class="badge p-2">HTML</span>
                     </div>
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#project-modal" class="project-btn btn btn-success p-2 m-3 text-center">See Project</button>
-                    <div class="modal fade" id="project-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#project-modal2" class="project-btn btn btn-success p-2 m-3 text-center">See Project</button>
+                    <div class="modal fade" id="project-modal2" tabindex="-1" aria-hidden="true">
                       <div class="modal-dialog modal-xl p-2">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -184,8 +184,8 @@
                       <span class="badge p-2">JavaScript</span>
                       <span class="badge p-2">HTML</span>
                     </div>
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#project-modal" class="project-btn btn btn-success p-2 m-3 text-center">See Project</button>
-                    <div class="modal fade" id="project-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#project-modal3" class="project-btn btn btn-success p-2 m-3 text-center">See Project</button>
+                    <div class="modal fade" id="project-modal3" tabindex="-1" aria-hidden="true">
                       <div class="modal-dialog modal-xl p-2">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -234,8 +234,8 @@
                       <span class="badge p-2">JavaScript</span>
                       <span class="badge p-2">HTML</span>
                     </div>
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#project-modal" class="project-btn btn btn-success p-2 m-3 text-center">See Project</button>
-                    <div class="modal fade" id="project-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#project-modal4" class="project-btn btn btn-success p-2 m-3 text-center">See Project</button>
+                    <div class="modal fade" id="project-modal4" tabindex="-1" aria-hidden="true">
                       <div class="modal-dialog modal-xl p-2">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -282,8 +282,8 @@
                       <span class="badge p-2">JavaScript</span>
                       <span class="badge p-2">HTML</span>
                     </div>
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#project-modal" class="project-btn btn btn-success p-2 m-3 text-center">See Project</button>
-                    <div class="modal fade" id="project-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#project-modal5" class="project-btn btn btn-success p-2 m-3 text-center">See Project</button>
+                    <div class="modal fade" id="project-modal5" tabindex="-1" aria-hidden="true">
                       <div class="modal-dialog modal-xl p-2">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -330,8 +330,8 @@
                       <span class="badge p-2">JavaScript</span>
                       <span class="badge p-2">HTML</span>
                     </div>
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#project-modal" class="project-btn btn btn-success p-2 m-3 text-center">See Project</button>
-                    <div class="modal fade" id="project-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#project-modal6" class="project-btn btn btn-success p-2 m-3 text-center">See Project</button>
+                    <div class="modal fade" id="project-modal6" tabindex="-1" aria-hidden="true">
                       <div class="modal-dialog modal-xl p-2">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -437,7 +437,7 @@
           </div>
         </div>
       </section>
-      <form class="justify-content-center" action="" method="POST">
+      <form class="justify-content-center" method="POST">
         <div class="row justify-content-between align-items-center align-content-center">
           <div class="col-md-5">
             <h3 class="form-title text-center fw-bold align-items-center">
